[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"
authors = ["Haarit Chavda <haarit1905@gmail.com>","Vedant Acharya <author@example.com>"]


# the profile used for 'cargo build'
[profile.dev]
panic = "abort"  # disable stack unwinding on panic

# the profile used by 'cargo build --release'
[profile.release]
panic = "abort" # disable stack unwinding on panic

[[bin]]
name = "blog_os"
test = false
bench = false

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]